[package]
name = "tokio-token-bucket"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@pomykalov.ru>"]
license       = "MIT/Apache-2.0"
description   = """
Token Bucket algorithm for rate limiting, using futures
"""
documentation = "https://docs.rs/tokio-token-bucket/0.1"
repository    = "https://github.com/glebpom/tokio-token-bucket"
readme        = "README.md"
keywords      = [ "token",
                  "rate",
                  "bucket",
                  "tokenbucket",
                  "ratelimit",
                  "futures" ]
exclude       = [
  ".gitignore",
  ".travis.yml",
]

[dependencies]
futures = "0.1.11"
tokio-core = "0.1.5"

[dev-dependencies]
rand = "0.3"